# music_masher

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  T002-environment-config.md  T003-database-schema.md  T004-fastapi-structure.md  T005-async-database-operations.md  bug-tracker.md  docker-compose.dev-with-ollama.yml  docker-compose.dev.yml  docker-compose.prod-with-ollama.yml  docker-compose.prod.yml  docker-compose.with-ollama.yml  env.example  env.production.example  main.py  pyproject.toml
.cursor/rules/: cursor-bug-tracking-rules.mdc  lmm_project_rigorous_rules.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docker-security.yml  test.yml
Docs/v2/: T002-environment-config.md  T006-web-search-service-report.md  T007-conversation-agent-foundation-report.md  T008-tool-integration-layer-report.md  T009-enhanced-api-layer-report.md  T010-content-generation-service-report.md  T011-docker-configuration-report.md  bug-tracker-cursor-rules-v2.md  implementation-documentation-v2-2.md  prd-v2-1.md  project-status-report.md  prompt-structure-v2-1.md  task.md
Docs/v2/docker/: README.md  development.md  production.md  security.md
app/: config.py  main.py
app/agents/: __init__.py  conversation_agent.py
app/db/: __init__.py  conversation_db.py  enums.py  utils.py  validation.py
app/services/: __init__.py  generation_service.py  tool_orchestrator.py  web_search.py
archived_do_not_use/: implementation-documentation-v2-1.md  implementation-documentation-v2.md  old_enhanced-prompt-structure.md  old_implementation_documentation_dont_done.md  old_implementation_documentation_v2.md  old_implementation_documentation_v3.md  old_music_mashup_prd.md  old_prompt_structure_doc.md  prompt-structure-v2.md
archived_do_not_use/v1/: Lit Music Mashup - Bug Tracker & Cursor Rules Impl.md  implementation_documentation.md  music_mashup_prd.md  prompt_structure.md  task.md
examples/: README.md  conversation_agent_demo.py  test_generation_service.py  test_tavily_integration.py
scripts/docker/: build.sh  security-scan.sh
tests/: __init__.py  conftest.py  test_conversation_agent.py  test_conversation_agent_with_tools.py  test_database_utils.py  test_fastapi_basic.py  test_generation_api.py  test_generation_service.py  test_tool_orchestrator.py  test_web_search_service.py
tests/integration/: __init__.py
tests/unit/: __init__.py
